# wxWidgets-Template

./: CMakeLists.txt  README.md
headers/: main.h  mainFrame.h
src/: main.cpp  mainFrame.cpp
